welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: not found: value fairev
   	fairev(c)
        ^MethodsPicture:3: error: not found: value c
   	fairev(c)
               ^MethodsPicture:28: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
      setCouleurBrosse()
                      ^